--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
   <!-- Lodash -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.20/lodash.min.js" integrity="sha512-90vH1Z83AJY9DmlWa8WkjkV79yfS2n2Oxhsi2dZbIv0nC4E6m5AbH8Nh156kkM7JePmqD6tcZsfad1ueoaovww==" crossorigin="anonymous"></script>  
 
+  <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/style_pc.css" media="screen and (min-width: 850.1px)" />
   <link rel="stylesheet" href="./css/style_mobile.css" media="screen and (max-width: 850.0px)" />
 
@@ -51,6 +52,43 @@
 
 </head>
 <body>
-  
+  <div id="wrapper">
+    <a href="#main" id="skip-nav">본문 바로가기</a>
+
+    <!-- HEADER -->
+    <header id="header">
+      <div class="inner">
+        <h1><a href="./index.html"><img src="./img/header_logo.jpg" alt="cotie SHOP" /></a></h1>
+        <!-- NAV -->
+        <nav id="gnb">
+          <h2 class="hide">메인 메뉴</h2>
+          <ul>
+            <li><a href="#">Brands</a></li>
+            <li><a href="#">Outdoor</a></li>
+            <li><a href="#">Indoor</a></li>
+            <li><a href="#">Cotielog</a></li>
+            <li><a href="#">Store</a></li>
+          </ul>
+
+          <ul class="top-menu">
+            <li>
+              <a href="#">
+                <i class="fas fa-search"></i>
+                <span class="hide">검색창 열기</span>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <span>Buy Shop</span>
+                <i class="fas fa-shopping-bag"></i>
+              </a>
+            </li>
+
+          </ul>
+        </nav>
+
+      </div>
+    </header>
+  </div>
 </body>
 </html>
