--- a/index.html
+++ b/index.html
@@ -116,6 +116,33 @@
 
       </div>
     </header>
+
+    <!-- MAIN -->
+    <main id="main">
+      <section class="main-visual">
+        <h2 class="hide">비주얼 영역</h2>
+        <div class="inner">
+
+          <h3 class="title">
+            Every Pet Deserves<br />
+            The Best 
+          </h3>
+          <div class="image">
+            <img src="./img/main-visual.gif" alt="Every Pet Deserves The Best" />
+          </div>
+          <p class="description">
+            가치있는 우리는 사랑받기 충분합니다.<br />
+            값진 소재와 세련된 디자인을 함께 즐기고 만족할 수 있습니다.
+          </p>
+          <a href="#" class="btn">
+            <span>Discover more</span>
+          </a>
+          <img src="./img/floating_flag.png" alt="icon" class="floating floating1" />
+          <img src="./img/floating_cloud.png" alt="icon" class="floating floating2" />
+          <img src="./img/floating_bone.png" alt="icon" class="floating floating3" />
+        </div>
+      </section>
+    </main>
   </div>
 </body>
 </html>
