--- a/index.html
+++ b/index.html
@@ -142,6 +142,35 @@
           <img src="./img/floating_bone.png" alt="icon" class="floating floating3" />
         </div>
       </section>
+
+      <!-- BRAND -->
+      <section class="main-brand">
+        <h2 class="hide">브랜드 영역</h2>
+        <div class="inner">
+
+          <h3>Brands</h3>
+          <div class="pet-so-chic">
+            <div class="image">
+              <img src="./img/brand_visual.gif" alt="" />
+            </div>
+            <div class="content-group">
+              <div class="title">
+                <img src="./img/logo_petsoshic.svg" alt="PET SO SHIC" />
+              </div>
+              <p class="description">
+                프랑스 파리는 파리지앵의 본고장입니다.<br />
+                이곳에서 시작된 펫 소 시크는<br />
+                우아함, 세련됨, 고상함을 대표하고 흠잡을 데 없는<br />
+                스타일을 연출합니다.
+              </p>
+              <a href="#" class="btn">
+                <span>Discover more</span>
+              </a>
+            </div>
+            <video src="./video/video.html"></video>
+          </div>
+        </div>
+      </section>
     </main>
   </div>
 </body>
