--- a/index.html
+++ b/index.html
@@ -167,7 +167,50 @@
                 <span>Discover more</span>
               </a>
             </div>
-            <video src="./video/video.html"></video>
+            <div class="video__area">
+              <video src="./video/pet-so-chic.mp4" autoplay muted loop preload="metadata" playsinline></video>
+            </div>            
+          </div>
+          <div class="maxbone">
+            <div class="content-group">
+              <div class="title">
+                <img src="./img/logo_maxbone.svg" alt="maxbone" />
+              </div>
+              <p class="description">
+                반려동물과 내가 함께하는<br />
+                스타일의 최종 목적지는 맥스본입니다.<br />
+                현대적인 라이프 스타일을 반영하고 재미와 기능을<br />
+                같이 생각합니다.          
+              </p>
+              <a href="#" class="btn">
+                <span>Discover more</span>
+              </a>
+            </div>
+            <div class="image">
+              <img src="./img/brand_maxbone.gif" alt="" />
+            </div>
+            <div class="video__area">
+              <video src="./video/maxbone.mp4" autoplay muted loop preload="metadata" playsinline></video>
+            </div>            
+          </div>
+          <div class="milk-and-pepper">
+            <div class="image">
+              <img src="./img/brand_milkpepper.jpg" alt="MILK & PEPPER" />
+            </div>
+            <div class="content-group">
+              <div class="title">
+                <img src="./img/logo_petsoshic.svg" alt="PET SO SHIC" />
+              </div>
+              <p class="description">
+                일년 내내 우아할 수 있는<br />
+                밀크&amp;페퍼는 세련되고 독창적입니다.<br />
+                계절마다 제안하는 상상력과 영감은 최적의<br />
+                스타일리쉬를 제공합니다.     
+              </p>
+              <a href="#" class="btn">
+                <span>Discover more</span>
+              </a>
+            </div>          
           </div>
         </div>
       </section>
