--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
             </div>
             <div class="content-group">
               <div class="title">
-                <img src="./img/logo_petsoshic.svg" alt="PET SO SHIC" />
+                <img src="./img/logo_milkpepper.svg" alt="PET SO SHIC" />
               </div>
               <p class="description">
                 일년 내내 우아할 수 있는<br />
