--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
       <section class="main-brand">
         <h2 class="hide">브랜드 영역</h2>
         <div class="inner">
-
+          <img src="./img/floating_fish.png" alt="icon" class="floating floating4" />
           <h3>Brands</h3>
           <div class="pet-so-chic">
             <div class="image">
@@ -167,6 +167,10 @@
                 <span>Discover more</span>
               </a>
             </div>
+            <img src="./img/pattern-grass-05.jpg" alt="" class="pattern pattern1" />
+            <img src="./img/pattern-grass-01.jpg" alt="" class="pattern pattern2" />
+            <img src="./img/pattern-grass-02.jpg" alt="" class="pattern pattern3" />
+            <img src="./img/pattern-footprint.png" alt="" class="pattern pattern4" />
             <div class="video__area">
               <video src="./video/pet-so-chic.mp4" autoplay muted loop preload="metadata" playsinline></video>
             </div>            
@@ -191,7 +195,10 @@
             </div>
             <div class="video__area">
               <video src="./video/maxbone.mp4" autoplay muted loop preload="metadata" playsinline></video>
-            </div>            
+            </div>
+            <img src="./img/layer-maxbone.jpg" alt="MAXBONE" class="pattern pattern1" />            
+            <img src="./img/layer-maxbone.jpg" alt="MAXBONE" class="pattern pattern2" />            
+            <img src="./img/layer-maxbone.jpg" alt="MAXBONE" class="pattern pattern3" />            
           </div>
           <div class="milk-and-pepper">
             <div class="image">
