--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
   <link rel="stylesheet" href="./css/style_mobile.css" media="screen and (max-width: 850.0px)" />
 
   <script src="./js/jquery-3.6.0.min.js"></script>
+  <script defer src="./js/swiper.js"></script>
   <script defer src="./js/common.js"></script>
 
 </head>
@@ -219,6 +220,181 @@
               </a>
             </div>          
           </div>
+        </div>
+      </section>
+
+      <!-- NEW -->
+      <section class="main-new">
+        <h2 class="hide">꼬띠샵 신상품</h2>
+        <div class="inner">
+
+          <h3>New</h3>
+
+          <div class="swiper pc">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <div class="image">
+                  <img src="./img/new_img1.jpg" alt="밀크 앤 페퍼 ARTIMON Hoody (아티멍 후디)" class="front" />
+                  <img src="./img/new_img1_back.jpg" alt="밀크 앤 페퍼 ARTIMON Hoody (아티멍 후디)" class="back" />
+                </div>
+                <div class="text-group">
+                  <em class="title">MILK &amp; PEPPER</em>
+                  <p class="description">
+                    밀크 앤 페퍼 ARTIMON Hoody (아티멍 후디)
+                  </p>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="image">
+                  <img src="./img/new_img2.png" alt="맥스본 Christian Cowan x max-bone Jumper(크리스찬 코완 x 맥스본 점퍼) <br />Hot Pink (핫핑크)" class="front" />
+                  <img src="./img/new_img2_back.png" alt="맥스본 Christian Cowan x max-bone Jumper(크리스찬 코완 x 맥스본 점퍼) <br />Hot Pink (핫핑크)" class="back" />
+                </div>
+                <div class="text-group">
+                  <em class="title">MAXBONE</em>
+                  <p class="description">
+                    맥스본 Christian Cowan x max-bone Jumper(크리스찬 코완 x 맥스본 점퍼)
+                  </p>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="image">
+                  <img src="./img/new_img3.jpg" alt="맥스본 Tai Knit Jumper (타이 니트 점퍼) Taupe (토프)" class="front" />
+                  <img src="./img/new_img3_back.jpg" alt="맥스본 Tai Knit Jumper (타이 니트 점퍼) Taupe (토프)" class="back" />
+                </div>
+                <div class="text-group">
+                  <em class="title">MAXBONE</em>
+                  <p class="description">
+                  맥스본 Tai Knit Jumper (타이 니트 점퍼) Taupe (토프)
+                  </p>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="image">
+                  <img src="./img/new_img4.jpg" alt="밀크 앤 페퍼 ROOKIE Hoody (루키 후디)" class="front" />
+                  <img src="./img/new_img4_back.jpg" alt="밀크 앤 페퍼 ROOKIE Hoody (루키 후디)" class="back" />
+                </div>
+                <div class="text-group">
+                  <em class="title">MILK &amp; PEPPER</em>
+                  <p class="description">
+                    밀크 앤 페퍼 ROOKIE Hoody (루키 후디)
+                  </p>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="image">
+                  <img src="./img/new_img5.jpg" alt="펫 소 시크 Warm so chic(패딩 자켓) – Red(레드)" class="front" />
+                  <img src="./img/new_img5_back.jpg" alt="펫 소 시크 Warm so chic(패딩 자켓) – Red(레드)" class="back" />
+                </div>
+                <div class="text-group">
+                  <em class="title">PET SO CHIC</em>
+                  <p class="description">
+                  펫 소 시크 Warm so chic(패딩 자켓) – Red(레드)
+                  </p>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="image">
+                  <img src="./img/new_img6.jpg" alt="밀크 앤 페퍼 MONGO Hoody (몽고 후디)" class="front" />
+                  <img src="./img/new_img6_back.jpg" alt="밀크 앤 페퍼 MONGO Hoody (몽고 후디)" class="back" />
+                </div>
+                <div class="text-group">
+                  <em class="title">MILK &amp; PEPPER</em>
+                  <p class="description">
+                  밀크 앤 페퍼 MONGO Hoody (몽고 후디)
+                  </p>
+                </em>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-prev">
+            <span class="material-icons">
+              arrow_back
+            </span>
+          </div>
+          <div class="swiper-next">
+            <span class="material-icons">
+              arrow_forward
+            </span>
+          </div>
+          <div class="swiper-pagination"></div>
+        </div>
+          <div class="swiper mobile">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <div class="image">
+                  <img src="./img/new_img1.jpg" alt="밀크 앤 페퍼 ARTIMON Hoody (아티멍 후디)" class="front" />
+                  <img src="./img/new_img1_back.jpg" alt="밀크 앤 페퍼 ARTIMON Hoody (아티멍 후디)" class="back" />
+                </div>
+                <div class="text-group">
+                  <em class="title">MILK &amp; PEPPER</em>
+                  <p class="description">
+                    밀크 앤 페퍼 ARTIMON Hoody (아티멍 후디)
+                  </p>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="image">
+                  <img src="./img/new_img2.png" alt="맥스본 Christian Cowan x max-bone Jumper(크리스찬 코완 x 맥스본 점퍼) <br />Hot Pink (핫핑크)" class="front" />
+                  <img src="./img/new_img2_back.png" alt="맥스본 Christian Cowan x max-bone Jumper(크리스찬 코완 x 맥스본 점퍼) <br />Hot Pink (핫핑크)" class="back" />
+                </div>
+                <div class="text-group">
+                  <em class="title">MAXBONE</em>
+                  <p class="description">
+                    맥스본 Christian Cowan x max-bone Jumper(크리스찬 코완 x 맥스본 점퍼)
+                  </p>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="image">
+                  <img src="./img/new_img3.jpg" alt="맥스본 Tai Knit Jumper (타이 니트 점퍼) Taupe (토프)" class="front" />
+                  <img src="./img/new_img3_back.jpg" alt="맥스본 Tai Knit Jumper (타이 니트 점퍼) Taupe (토프)" class="back" />
+                </div>
+                <div class="text-group">
+                  <em class="title">MAXBONE</em>
+                  <p class="description">
+                  맥스본 Tai Knit Jumper (타이 니트 점퍼) Taupe (토프)
+                  </p>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="image">
+                  <img src="./img/new_img4.jpg" alt="밀크 앤 페퍼 ROOKIE Hoody (루키 후디)" class="front" />
+                  <img src="./img/new_img4_back.jpg" alt="밀크 앤 페퍼 ROOKIE Hoody (루키 후디)" class="back" />
+                </div>
+                <div class="text-group">
+                  <em class="title">MILK &amp; PEPPER</em>
+                  <p class="description">
+                    밀크 앤 페퍼 ROOKIE Hoody (루키 후디)
+                  </p>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="image">
+                  <img src="./img/new_img5.jpg" alt="펫 소 시크 Warm so chic(패딩 자켓) – Red(레드)" class="front" />
+                  <img src="./img/new_img5_back.jpg" alt="펫 소 시크 Warm so chic(패딩 자켓) – Red(레드)" class="back" />
+                </div>
+                <div class="text-group">
+                  <em class="title">PET SO CHIC</em>
+                  <p class="description">
+                  펫 소 시크 Warm so chic(패딩 자켓) – Red(레드)
+                  </p>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="image">
+                  <img src="./img/new_img6.jpg" alt="밀크 앤 페퍼 MONGO Hoody (몽고 후디)" class="front" />
+                  <img src="./img/new_img6_back.jpg" alt="밀크 앤 페퍼 MONGO Hoody (몽고 후디)" class="back" />
+                </div>
+                <div class="text-group">
+                  <em class="title">MILK &amp; PEPPER</em>
+                  <p class="description">
+                  밀크 앤 페퍼 MONGO Hoody (몽고 후디)
+                  </p>
+                </em>
+              </div>
+            </div>
+          </div>
+
         </div>
       </section>
     </main>
