--- a/index.html
+++ b/index.html
@@ -397,6 +397,26 @@
 
         </div>
       </section>
+
+      <!-- SLOGAN -->
+      <section class="main-slogan">
+        <h2 class="hide">꼬띠샵 슬로건</h2>
+
+        <div class="text-group">
+          <span>PET SO CHIC</span>
+          <span>MAXBONE</span>
+          <span>MILK &amp; PEPPER</span>
+          <span>PET SO CHIC</span>
+          <span>MAXBONE</span>
+          <span>MILK &amp; PEPPER</span>
+          <span>PET SO CHIC</span>
+          <span>MAXBONE</span>
+          <span>MILK &amp; PEPPER</span>
+          <span>PET SO CHIC</span>
+          <span>MAXBONE</span>
+          <span>MILK &amp; PEPPER</span>
+        </div>
+      </section>
     </main>
   </div>
 </body>
