--- a/index.html
+++ b/index.html
@@ -417,6 +417,46 @@
           <span>MILK &amp; PEPPER</span>
         </div>
       </section>
+
+      <!-- COTIELOG -->
+      <section class="main-cotielog">
+        <h2 class="hide">꼬띠샵 소식지</h2>
+        <div class="inner">
+
+          <h3>Cotielog</h3>
+
+          <div class="content-group">
+              <div class="content">
+                <div class="poster">
+                  <img src="./img/cotielog_img1.jpg" alt="오프라인 입점 매장 안내" />
+                </div>
+                <em class="title">오프라인 입점 매장 안내</em>
+              </div>
+              <div class="content">
+                <div class="poster">
+                  <img src="./img/cotielog_img2.png" alt="2021 GDWEB 디자인 어워즈 WINNER PRIZE 수상" />
+                </div>
+                <em class="title">2021 GDWEB 디자인 어워즈 WINNER PRIZE 수상</em>
+              </div>
+              <div class="content">
+                <div class="poster">
+                  <img src="./img/cotielog_img3.jpg" alt="꼬띠샵은 친환경 포장재를 사용합니다." />
+                </div>
+                <em class="title">꼬띠샵은 친환경 포장재를 사용합니다.</em>
+              </div>
+              <div class="content">
+                <div class="poster">
+                  <img src="./img/cotielog_img4.png" alt="2021.09 우수 리뷰 고객 캐리커쳐" />
+                </div>
+                <em class="title">2021.09 우수 리뷰 고객 캐리커쳐</em>
+              </div>
+          </div>
+          <a href="#" class="btn">
+            <i class="fas fa-plus"></i><span>more</span>
+          </a>
+
+        </div>
+      </section>
     </main>
   </div>
 </body>
