--- a/index.html
+++ b/index.html
@@ -457,6 +457,40 @@
 
         </div>
       </section>
+
+      <!-- INSTAGRAM -->
+      <section class="main-instagram">
+        <h2 class="hide">꼬띠샵 인스타그램</h2>
+        <div class="inner">
+
+          <h3>Instagram<br class="only-m" />
+          @cotie_shop
+          </h3>
+
+          <ul class="main-instagram__menu">
+            <li>
+              <a href="https://www.instagram.com/p/CVMtYWjLMgr/" target="_blank">
+                <img src="./img/insta_img1.jpg" alt="Christian Cowan x max-bone Jumper Hot Pink" />
+              </a>
+            </li>
+            <li>
+              <a href="https://www.instagram.com/p/CU63Ah-rbVo/" target="_blank">
+                <img src="./img/insta_img2.jpg" alt="Cotie IDOL Hoody" />
+              </a>
+            </li>
+            <li>
+              <a href="https://www.instagram.com/p/CU62KBUr7wn/" target="_blank">
+                <img src="./img/insta_img3.jpg" alt="Cotie Tiny dog collar - Big Bone" />
+              </a>
+            </li>
+            <li>
+              <a href="https://www.instagram.com/p/CU608F8repK/" target="_blank">
+                <img src="./img/insta_img4.jpg" alt="Cotie Mb Eats Food Scoop & Bag Clip" />
+              </a>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
   </div>
 </body>
