--- a/index.html
+++ b/index.html
@@ -463,10 +463,7 @@
         <h2 class="hide">꼬띠샵 인스타그램</h2>
         <div class="inner">
 
-          <h3>Instagram<br class="only-m" />
-          @cotie_shop
-          </h3>
-
+          <h3>Instagram<br class="only-m" />@cotie_shop</h3>
           <ul class="main-instagram__menu">
             <li>
               <a href="https://www.instagram.com/p/CVMtYWjLMgr/" target="_blank">
