--- a/index.html
+++ b/index.html
@@ -425,32 +425,32 @@
 
           <h3>Cotielog</h3>
 
-          <div class="content-group">
-              <div class="content">
+          <ul class="main-cotielog__menu">
+              <li>
                 <div class="poster">
                   <img src="./img/cotielog_img1.jpg" alt="오프라인 입점 매장 안내" />
                 </div>
                 <em class="title">오프라인 입점 매장 안내</em>
-              </div>
-              <div class="content">
+              </li>
+              <li>
                 <div class="poster">
                   <img src="./img/cotielog_img2.png" alt="2021 GDWEB 디자인 어워즈 WINNER PRIZE 수상" />
                 </div>
                 <em class="title">2021 GDWEB 디자인 어워즈 WINNER PRIZE 수상</em>
-              </div>
-              <div class="content">
+              </li>
+              <li>
                 <div class="poster">
                   <img src="./img/cotielog_img3.jpg" alt="꼬띠샵은 친환경 포장재를 사용합니다." />
                 </div>
                 <em class="title">꼬띠샵은 친환경 포장재를 사용합니다.</em>
-              </div>
-              <div class="content">
+              </li>
+              <li>
                 <div class="poster">
                   <img src="./img/cotielog_img4.png" alt="2021.09 우수 리뷰 고객 캐리커쳐" />
                 </div>
                 <em class="title">2021.09 우수 리뷰 고객 캐리커쳐</em>
-              </div>
-          </div>
+              </li>
+          </ul>
           <a href="#" class="btn">
             <i class="fas fa-plus"></i><span>more</span>
           </a>
@@ -489,6 +489,45 @@
         </div>
       </section>
     </main>
+
+    <!-- FOOTER -->
+    <footer id="footer">
+      <div class="inner">
+
+        <div class="row">
+          <ul class="footer__menu">
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Buy Shop</a></li>
+          </ul>
+          <ul class="foonter__links">
+            <li><a href="#">facebook</a></li>
+            <li><a href="#">instagram</a></li>
+            <li><a href="#"><i class="fas fa-comment"></i></a></li>
+          </ul>
+        </div>
+        <div class="row">
+          <div class="info">
+            <a href="#">
+              <span>Cotieshop</span>
+              <i class="fas fa-chevron-down"></i>
+            </a>
+            <div>
+              <span>
+                주식회사 델핀 서울특별시 용산구 우사단로2길 1, 3층 대표 : 신승호 사업자 등록번호 : 113-86-83830
+              </span>
+              <address>
+                04413 서울특별시 용산구 우사단로2길 1 (보광동) TEL : 02-2678-3096~7 FAX : 02-2678-3099
+              </address>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <p class="copyright">
+            Copyright <span class="this-year"></span>. Cotieshop All rights reserved.
+          </p>
+        </div>
+      </div>
+    </footer>
   </div>
 </body>
 </html>
