--- a/index.html
+++ b/index.html
@@ -492,6 +492,7 @@
 
     <!-- FOOTER -->
     <footer id="footer">
+      <div class="footer__layer"></div>
       <div class="inner">
 
         <div class="row">
