--- a/index.html
+++ b/index.html
@@ -138,9 +138,9 @@
           <a href="#" class="btn">
             <span>Discover more</span>
           </a>
-          <img src="./img/floating_flag.png" alt="icon" class="floating floating1" />
-          <img src="./img/floating_cloud.png" alt="icon" class="floating floating2" />
-          <img src="./img/floating_bone.png" alt="icon" class="floating floating3" />
+          <img src="./img/floating_flag.png" alt="" class="floating floating1" />
+          <img src="./img/floating_cloud.png" alt="" class="floating floating2" />
+          <img src="./img/floating_bone.png" alt="" class="floating floating3" />
         </div>
       </section>
 
@@ -148,7 +148,7 @@
       <section class="main-brand">
         <h2 class="hide">브랜드 영역</h2>
         <div class="inner">
-          <img src="./img/floating_fish.png" alt="icon" class="floating floating4" />
+          <img src="./img/floating_fish.png" alt="" class="floating floating4" />
           <h3>Brands</h3>
           <div class="pet-so-chic">
             <div class="image">
@@ -197,9 +197,9 @@
             <div class="video__area">
               <video src="./video/maxbone.mp4" autoplay muted loop preload="metadata" playsinline></video>
             </div>
-            <img src="./img/layer-maxbone.jpg" alt="MAXBONE" class="pattern pattern1" />            
-            <img src="./img/layer-maxbone.jpg" alt="MAXBONE" class="pattern pattern2" />            
-            <img src="./img/layer-maxbone.jpg" alt="MAXBONE" class="pattern pattern3" />            
+            <img src="./img/layer-maxbone.jpg" alt="" class="pattern pattern1" />            
+            <img src="./img/layer-maxbone.jpg" alt="" class="pattern pattern2" />            
+            <img src="./img/layer-maxbone.jpg" alt="" class="pattern pattern3" />            
           </div>
           <div class="milk-and-pepper">
             <div class="image">
