--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/ScrollMagic.min.js"></script>
   <!-- Lodash -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.20/lodash.min.js" integrity="sha512-90vH1Z83AJY9DmlWa8WkjkV79yfS2n2Oxhsi2dZbIv0nC4E6m5AbH8Nh156kkM7JePmqD6tcZsfad1ueoaovww==" crossorigin="anonymous"></script>  
+  <!--GSAP-->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js" integrity="sha512-IQLehpLoVS4fNzl7IfH8Iowfm5+RiMGtHykgZJl9AWMgqx0AmJ6cRWcB+GaGVtIsnC4voMfm8f2vwtY+6oPjpQ==" crossorigin="anonymous"></script>
 
   <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/style_pc.css" media="screen and (min-width: 850.1px)" />
@@ -126,7 +128,7 @@
 
           <h3 class="title">
             Every Pet Deserves<br />
-            The Best 
+            The Best
           </h3>
           <div class="image">
             <img src="./img/main-visual.gif" alt="Every Pet Deserves The Best" />
@@ -174,7 +176,7 @@
             <img src="./img/pattern-footprint.png" alt="" class="pattern pattern4" />
             <div class="video__area">
               <video src="./video/pet-so-chic.mp4" autoplay muted loop preload="metadata" playsinline></video>
-            </div>            
+            </div>
           </div>
           <div class="maxbone">
             <div class="content-group">
@@ -185,7 +187,7 @@
                 반려동물과 내가 함께하는<br />
                 스타일의 최종 목적지는 맥스본입니다.<br />
                 현대적인 라이프 스타일을 반영하고 재미와 기능을<br />
-                같이 생각합니다.          
+                같이 생각합니다.
               </p>
               <a href="#" class="btn">
                 <span>Discover more</span>
@@ -197,9 +199,9 @@
             <div class="video__area">
               <video src="./video/maxbone.mp4" autoplay muted loop preload="metadata" playsinline></video>
             </div>
-            <img src="./img/layer-maxbone.jpg" alt="" class="pattern pattern1" />            
-            <img src="./img/layer-maxbone.jpg" alt="" class="pattern pattern2" />            
-            <img src="./img/layer-maxbone.jpg" alt="" class="pattern pattern3" />            
+            <img src="./img/layer-maxbone.jpg" alt="" class="pattern pattern1" />
+            <img src="./img/layer-maxbone.jpg" alt="" class="pattern pattern2" />
+            <img src="./img/layer-maxbone.jpg" alt="" class="pattern pattern3" />
           </div>
           <div class="milk-and-pepper">
             <div class="image">
@@ -213,12 +215,12 @@
                 일년 내내 우아할 수 있는<br />
                 밀크&amp;페퍼는 세련되고 독창적입니다.<br />
                 계절마다 제안하는 상상력과 영감은 최적의<br />
-                스타일리쉬를 제공합니다.     
+                스타일리쉬를 제공합니다.
               </p>
               <a href="#" class="btn">
                 <span>Discover more</span>
               </a>
-            </div>          
+            </div>
           </div>
         </div>
       </section>
@@ -246,8 +248,10 @@
               </div>
               <div class="swiper-slide">
                 <div class="image">
-                  <img src="./img/new_img2.png" alt="맥스본 Christian Cowan x max-bone Jumper(크리스찬 코완 x 맥스본 점퍼) <br />Hot Pink (핫핑크)" class="front" />
-                  <img src="./img/new_img2_back.png" alt="맥스본 Christian Cowan x max-bone Jumper(크리스찬 코완 x 맥스본 점퍼) <br />Hot Pink (핫핑크)" class="back" />
+                  <img src="./img/new_img2.png"
+                    alt="맥스본 Christian Cowan x max-bone Jumper(크리스찬 코완 x 맥스본 점퍼) <br />Hot Pink (핫핑크)" class="front" />
+                  <img src="./img/new_img2_back.png"
+                    alt="맥스본 Christian Cowan x max-bone Jumper(크리스찬 코완 x 맥스본 점퍼) <br />Hot Pink (핫핑크)" class="back" />
                 </div>
                 <div class="text-group">
                   <em class="title">MAXBONE</em>
@@ -264,7 +268,7 @@
                 <div class="text-group">
                   <em class="title">MAXBONE</em>
                   <p class="description">
-                  맥스본 Tai Knit Jumper (타이 니트 점퍼) Taupe (토프)
+                    맥스본 Tai Knit Jumper (타이 니트 점퍼) Taupe (토프)
                   </p>
                 </div>
               </div>
@@ -288,7 +292,7 @@
                 <div class="text-group">
                   <em class="title">PET SO CHIC</em>
                   <p class="description">
-                  펫 소 시크 Warm so chic(패딩 자켓) – Red(레드)
+                    펫 소 시크 Warm so chic(패딩 자켓) – Red(레드)
                   </p>
                 </div>
               </div>
@@ -300,24 +304,23 @@
                 <div class="text-group">
                   <em class="title">MILK &amp; PEPPER</em>
                   <p class="description">
-                  밀크 앤 페퍼 MONGO Hoody (몽고 후디)
+                    밀크 앤 페퍼 MONGO Hoody (몽고 후디)
                   </p>
-                </em>
+                </div>
               </div>
             </div>
+            <div class="swiper-prev">
+              <span class="material-icons">
+                arrow_back
+              </span>
+            </div>
+            <div class="swiper-next">
+              <span class="material-icons">
+                arrow_forward
+              </span>
+            </div>
+            <div class="swiper-pagination"></div>
           </div>
-          <div class="swiper-prev">
-            <span class="material-icons">
-              arrow_back
-            </span>
-          </div>
-          <div class="swiper-next">
-            <span class="material-icons">
-              arrow_forward
-            </span>
-          </div>
-          <div class="swiper-pagination"></div>
-        </div>
           <div class="swiper mobile">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
@@ -334,8 +337,10 @@
               </div>
               <div class="swiper-slide">
                 <div class="image">
-                  <img src="./img/new_img2.png" alt="맥스본 Christian Cowan x max-bone Jumper(크리스찬 코완 x 맥스본 점퍼) <br />Hot Pink (핫핑크)" class="front" />
-                  <img src="./img/new_img2_back.png" alt="맥스본 Christian Cowan x max-bone Jumper(크리스찬 코완 x 맥스본 점퍼) <br />Hot Pink (핫핑크)" class="back" />
+                  <img src="./img/new_img2.png"
+                    alt="맥스본 Christian Cowan x max-bone Jumper(크리스찬 코완 x 맥스본 점퍼) <br />Hot Pink (핫핑크)" class="front" />
+                  <img src="./img/new_img2_back.png"
+                    alt="맥스본 Christian Cowan x max-bone Jumper(크리스찬 코완 x 맥스본 점퍼) <br />Hot Pink (핫핑크)" class="back" />
                 </div>
                 <div class="text-group">
                   <em class="title">MAXBONE</em>
@@ -352,7 +357,7 @@
                 <div class="text-group">
                   <em class="title">MAXBONE</em>
                   <p class="description">
-                  맥스본 Tai Knit Jumper (타이 니트 점퍼) Taupe (토프)
+                    맥스본 Tai Knit Jumper (타이 니트 점퍼) Taupe (토프)
                   </p>
                 </div>
               </div>
@@ -376,7 +381,7 @@
                 <div class="text-group">
                   <em class="title">PET SO CHIC</em>
                   <p class="description">
-                  펫 소 시크 Warm so chic(패딩 자켓) – Red(레드)
+                    펫 소 시크 Warm so chic(패딩 자켓) – Red(레드)
                   </p>
                 </div>
               </div>
@@ -388,9 +393,9 @@
                 <div class="text-group">
                   <em class="title">MILK &amp; PEPPER</em>
                   <p class="description">
-                  밀크 앤 페퍼 MONGO Hoody (몽고 후디)
+                    밀크 앤 페퍼 MONGO Hoody (몽고 후디)
                   </p>
-                </em>
+                </div>
               </div>
             </div>
           </div>
@@ -426,30 +431,30 @@
           <h3>Cotielog</h3>
 
           <ul class="main-cotielog__menu">
-              <li>
-                <div class="poster">
-                  <img src="./img/cotielog_img1.jpg" alt="오프라인 입점 매장 안내" />
-                </div>
-                <em class="title">오프라인 입점 매장 안내</em>
-              </li>
-              <li>
-                <div class="poster">
-                  <img src="./img/cotielog_img2.png" alt="2021 GDWEB 디자인 어워즈 WINNER PRIZE 수상" />
-                </div>
-                <em class="title">2021 GDWEB 디자인 어워즈 WINNER PRIZE 수상</em>
-              </li>
-              <li>
-                <div class="poster">
-                  <img src="./img/cotielog_img3.jpg" alt="꼬띠샵은 친환경 포장재를 사용합니다." />
-                </div>
-                <em class="title">꼬띠샵은 친환경 포장재를 사용합니다.</em>
-              </li>
-              <li>
-                <div class="poster">
-                  <img src="./img/cotielog_img4.png" alt="2021.09 우수 리뷰 고객 캐리커쳐" />
-                </div>
-                <em class="title">2021.09 우수 리뷰 고객 캐리커쳐</em>
-              </li>
+            <li>
+              <div class="poster">
+                <img src="./img/cotielog_img1.jpg" alt="오프라인 입점 매장 안내" />
+              </div>
+              <em class="title">오프라인 입점 매장 안내</em>
+            </li>
+            <li>
+              <div class="poster">
+                <img src="./img/cotielog_img2.png" alt="2021 GDWEB 디자인 어워즈 WINNER PRIZE 수상" />
+              </div>
+              <em class="title">2021 GDWEB 디자인 어워즈 WINNER PRIZE 수상</em>
+            </li>
+            <li>
+              <div class="poster">
+                <img src="./img/cotielog_img3.jpg" alt="꼬띠샵은 친환경 포장재를 사용합니다." />
+              </div>
+              <em class="title">꼬띠샵은 친환경 포장재를 사용합니다.</em>
+            </li>
+            <li>
+              <div class="poster">
+                <img src="./img/cotielog_img4.png" alt="2021.09 우수 리뷰 고객 캐리커쳐" />
+              </div>
+              <em class="title">2021.09 우수 리뷰 고객 캐리커쳐</em>
+            </li>
           </ul>
           <a href="#" class="btn">
             <i class="fas fa-plus"></i><span>more</span>
