--- a/index.html
+++ b/index.html
@@ -506,9 +506,9 @@
             <li><a href="#">Buy Shop</a></li>
           </ul>
           <ul class="footer__links">
-            <li><a href="#">facebook</a></li>
-            <li><a href="#">instagram</a></li>
-            <li><a href="#"><i class="fas fa-comment"></i></a></li>
+            <li><a href="https://www.facebook.com/cotieshop.co.kr/" target="_blank">facebook</a></li>
+            <li><a href="https://www.instagram.com/cotie_shop/" target="_blank">instagram</a></li>
+            <li><a href="https://accounts.kakao.com/login?continue=http%3A%2F%2Fpf.kakao.com%2F_ivZMs%2Fchat" target="_blank"><i class="fas fa-comment"></i></a></li>
           </ul>
         </div>
         <div class="row">
