--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <span></span>
         </a>
         <a href="#" class="close-btn mobile">
-          <i class="fas fa-times"><span >닫기</span></i>
+          <i class="fas fa-times"><span>닫기</span></i>
         </a>
         <!-- NAV -->
         <nav id="gnb">
@@ -168,9 +168,9 @@
                 <img src="./img/logo_petsoshic.svg" alt="PET SO SHIC" />
               </div>
               <p class="description">
-                프랑스 파리는 파리지앵의 본고장입니다.<br />
-                이곳에서 시작된 펫 소 시크는<br />
-                우아함, 세련됨, 고상함을 대표하고 흠잡을 데 없는<br />
+                프랑스 파리는 파리지앵의 본고장입니다.<br class="only-pc" />
+                이곳에서 시작된 펫 소 시크는<br class="only-pc" />
+                우아함, 세련됨, 고상함을 대표하고 흠잡을 데 없는<br class="only-pc" />
                 스타일을 연출합니다.
               </p>
               <a href="#" class="btn">
@@ -187,23 +187,27 @@
           </div>
           <div class="maxbone scroll-spy">
             <img src="./img/layer_toy.png" alt="" class="floating" />
-            <div class="content-group">
-              <div class="title">
-                <img src="./img/logo_maxbone.svg" alt="maxbone" />
+            <div class="wrap">
+              <div class="image">
+                <img src="./img/brand_maxbone.gif" alt="" />
               </div>
-              <p class="description">
-                반려동물과 내가 함께하는<br />
-                스타일의 최종 목적지는 맥스본입니다.<br />
-                현대적인 라이프 스타일을 반영하고 재미와 기능을<br />
-                같이 생각합니다.
-              </p>
-              <a href="#" class="btn">
-                <span>Discover more</span>
-              </a>
+              <div class="content-group">
+                <div class="title">
+                  <img src="./img/logo_maxbone.svg" alt="maxbone" />
+                </div>
+                <p class="description">
+                  반려동물과 내가 함께하는<br class="only-pc" />
+                  스타일의 최종 목적지는 맥스본입니다.<br class="only-pc" />
+                  현대적인 라이프 스타일을 반영하고 재미와 기능을<br class="only-pc" />
+                  같이 생각합니다.
+                </p>
+                <a href="#" class="btn">
+                  <span>Discover more</span>
+                </a>
+              </div>
             </div>
-            <div class="image">
-              <img src="./img/brand_maxbone.gif" alt="" />
-            </div>
+
+
             <div class="video__area">
               <video src="./video/maxbone.mp4" autoplay muted loop preload="metadata" playsinline></video>
             </div>
@@ -220,9 +224,9 @@
                 <img src="./img/logo_milkpepper.svg" alt="PET SO SHIC" />
               </div>
               <p class="description">
-                일년 내내 우아할 수 있는<br />
-                밀크&amp;페퍼는 세련되고 독창적입니다.<br />
-                계절마다 제안하는 상상력과 영감은 최적의<br />
+                일년 내내 우아할 수 있는<br class="only-pc" />
+                밀크&amp;페퍼는 세련되고 독창적입니다.<br class="only-pc" />
+                계절마다 제안하는 상상력과 영감은 최적의<br class="only-pc" />
                 스타일리쉬를 제공합니다.
               </p>
               <a href="#" class="btn">
