--- a/index.html
+++ b/index.html
@@ -576,12 +576,12 @@
     });
 
     const patterns = document.querySelectorAll('.main-brand .maxbone .pattern');
-    patterns.forEach(function (pattern) {
-      gsap.to(pattern, 1, {
-        delay: (pattern + 1) * .7,
-        display: 'block'
-      })
-    });
+    // patterns.forEach(function (pattern) {
+    //   gsap.to(pattern, 1, {
+    //     delay: (pattern + 1) * .7,
+    //     display: 'block'
+    //   })
+    // });
   </script>
 </body>
 </html>
